--- a/Package.json
+++ b/Package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Kotlk.UnityArena",
+  "name": "com.kotlk.unityarena",
   "version": "0.1.0",
   "displayName": "UnityArena",
   "description": "Arena Allocator for Unity",
